--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,4 +6,8 @@
 </br>
 <a href="/transfer">Transfer</a>
 
+<%- include('summary',{account:accounts.savings}) %>
+<%- include('summary',{account:accounts.checking}) %>
+<%- include('summary',{account:accounts.credit}) %>
+
 <%- include('footer') %>
